syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/types_service.proto";

option csharp_namespace = "Services.SubModules.Protos";

service CommonGrpc {
	rpc GetCurrency (IdGrpcModel) returns (CurrencyCommonGrpcResponse);
	rpc GetCountry (IdGrpcModel) returns (CountryCommonGrpcResponse);
	rpc GetCurrencies (google.protobuf.Empty) returns (CurrenciesCommonGrpcResponse);
	rpc GetCountries (google.protobuf.Empty) returns (CountriesCommonGrpcResponse);
}

message CurrencyCommonGrpcResponse
{
	string id = 1;
	string code = 2;
	string symbol = 3;
	int32 number = 4;
	string name = 5;
	bool enable = 6;
}

message CurrenciesCommonGrpcResponse
{
	repeated CurrencyCommonGrpcResponse values = 1;
}

message CountryCommonGrpcResponse
{
	string id = 1;
	string iso2 = 2;
	string iso3 = 3;
}

message CountriesCommonGrpcResponse
{
	repeated CountryCommonGrpcResponse values = 1;
}